# QuokkaEditor-Back

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  oc.py  pyproject.toml
src/quokka_editor_back/: __main__.py  app.py  conftest.py  console.py  gunicorn.conf.py  settings.py  sync.py
src/quokka_editor_back/actors/: __init__.py  middleware.py  task.py
src/quokka_editor_back/api/: app.py
src/quokka_editor_back/auth/: __init__.py  auth.py  authentication.py  utils.py
src/quokka_editor_back/models/: document.py  operation.py  project.py  user.py  utils.py
src/quokka_editor_back/models/migrations/quokka_editor_back/: 0_20230531184449_init.py  10_20231028085132_add-shared.py  11_20231029124450_update.py  12_20231201180456_add-project.py  13_20231202094743_change-char-field-max-lenght.py  14_20231214141331_update.py  1_20230620182127_add_user.py  1_20230624130117_update.py  2_20230815153539_add_operation.py  3_20230815153607_add_operation_relation.py  4_20230815173526_change_char_limit.py  5_20230909163559_char-to-string.py  6_20230909164228_add_revision.py  7_20231001152026_add-revision.py  8_20231014153009_update.py  9_20231025164532_add-last-revision.py
src/quokka_editor_back/routers/: __init__.py  auth.py  connection_manager.py  document_templates.py  documents.py  projects.py  users.py  websockets.py
src/quokka_editor_back/schema/: auth.py  document.py  document_template.py  project.py  user.py  websocket.py
src/quokka_editor_back/statics/: 21765700_496525830727263_6580997073653004959_o.jpg_Draft_Project
src/quokka_editor_back/templates/: mock-ui.html
src/quokka_editor_back/tests/actors/: test_tasks.py
src/quokka_editor_back/tests/routers/: test_auth.py  test_connection_manager.py  test_document_templates.py  test_documents.py  test_projects.py  test_users.py  test_websockets.py
src/quokka_editor_back/tests/routers/actors/: test_tasks.py
src/quokka_editor_back/tests/routers/documents/: test_api.py  test_documents.py
src/quokka_editor_back/tests/utils/: test_ot.py
src/quokka_editor_back/utils/: auth.py  ot.py  redis.py  time_execution.py
src/quokka_editor_back/utils/actors/: __init__.py  task.py
