[tool.poetry]
name = "quokka-editor-back"
version = "0.1.0"
description = ""
authors = ["D0cza <d0.czajkowski@gmail.com>"]
readme = "README.md"
packages = [{include = "quokka_editor_back", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
gunicorn = "^20.1.0"
websockets = "^11.0.3"
aerich = "^0.7.1"
rich = "^13.3.5"
tortoise-orm = {version = "^0.19.3", extras = ["asyncpg"]}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.2"
isort = "^5.12.0"
mypy = "^1.2.0"
pytest = "^7.3.1"
flake8 = "^6.0.0"
ipdb = "^0.13.13"
pre-commit = "^3.2.2"

[tool.aerich]
tortoise_orm = "quokka_editor_back.settings.TORTOISE_ORM"
location = "./src/quokka_editor_back/models/migrations"
src_folder = "./src/quokka_editor_back/."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
